package patterns.behavioral.iterator;

public class Soru {

    private Long soruNo;

    public Soru(Long soruNo) {
        this.soruNo = soruNo;
    }

    public Long getSoruNo() {
        return soruNo;
    }

    public void setSoruNo(Long soruNo) {
        this.soruNo = soruNo;
    }
}
